[project]
name = "birt-backend"
version = "0.1.0"
description = "Birt backend service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "birt-shared",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "structlog>=25.5.0",
    "pydantic-settings>=2.12.0",
]

[tool.uv.sources]
birt-shared = { workspace = true }
birt-testkit = { workspace = true }

[tool.uv.workspace]
members = [
    "../../packages/birt-shared",
    "../../packages/birt-testkit",
]

[dependency-groups]
dev = [
    "birt-testkit",
    "httpx>=0.28.0",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.7",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

[tool.ruff.lint.isort]
known-first-party = ["birt_*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
